[project]
name = "curso-de-claude-api"
version = "0.1.0"
description = "Ejemplos en Python para el curso de Claude API"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.54.0",
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"
